--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.32",
-    "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5"
+    "expo": "~52.0.0",
+    "expo-asset": "~11.0.0",
+    "expo-dev-client": "~5.0.20",
+    "onnxruntime-react-native": "^1.22.0",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-fs": "^2.20.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-vision-camera": "^4.7.3",
+    "react-native-worklets-core": "^1.5.0",
+    "vision-camera-resize-plugin": "^3.2.0"
   },
   "private": true
 }
